Closed Bug 1677275 Opened 3 years ago Closed 3 years ago

Fling acceleration is applied incorrectly after a long pause, when a previous fast fling was interrupted with a tap

Categories

(Core :: Panning and Zooming, defect, P3)

All
Android
defect

Tracking

()

RESOLVED FIXED
85 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- unaffected
firefox83 --- unaffected
firefox84 --- fixed
firefox85 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

  1. Have a long website loaded in Firefox for Android.
  2. Do a series of fast flings downwards, to build up speed.
  3. Interrupt the fling with a tap.
  4. Wait for a bit.
  5. Do a regular fling in the same direction as before.

Expected results:
The regular fling should not be accelerated.

Actual results:
The regular fling goes really really fast.

Severity: -- → S3
Priority: -- → P3
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/3d134db832d7
Cancel fling acceleration at the end of touch gestures that didn't cause a fling. r=botond
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch

Comment on attachment 9187884 [details]
Bug 1677275 - Cancel fling acceleration at the end of touch gestures that didn't cause a fling. r=botond

Beta/Release Uplift Approval Request

  • User impact if declined: Some scroll gestures make the page scroll too fast.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: See comment 0
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): small fix, has test
  • String changes made/needed:
Attachment #9187884 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Comment on attachment 9187884 [details]
Bug 1677275 - Cancel fling acceleration at the end of touch gestures that didn't cause a fling. r=botond

Approved for 84.0b3.

Attachment #9187884 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Has Regression Range: --- → yes
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: