Bug 1677275 - Cancel fling acceleration at the end of touch gestures that didn't cause a fling. r=botond, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D97088